--- a/src/index.css
+++ b/src/index.css
@@ -8,3 +8,24 @@ body {
   overflow-x: hidden;
   scroll-behavior: smooth;
 }
+
+@font-face {
+  font-family: 'Roxale Story';
+  src: url('/path/to/Roxale Story.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: 'Roxale Story';
+  src: url('/path/to/Roxale Story Italic.ttf') format('truetype');
+  font-weight: normal;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: 'Roxale Story Calligraphy';
+  src: url('/path/to/Roxale Story Calligraphy.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
