--- a/src/index.css
+++ b/src/index.css
@@ -11,21 +11,21 @@ body {
 
 @font-face {
   font-family: 'Roxale Story';
-  src: url('/public/fonts/Roxale\ Story.ttf') format('truetype');
+  src: url('/src/assets/fonts/Roxale\ Story.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
 
 @font-face {
   font-family: 'Roxale Story';
-  src: url('/public/fonts/Roxale Story Italic.ttf') format('truetype');
+  src: url('/src/assets/fonts/Roxale\ Story\ Italic.ttf') format('truetype');
   font-weight: normal;
   font-style: italic;
 }
 
 @font-face {
   font-family: 'Roxale Story Calligraphy';
-  src: url('/public/fonts/Roxale Story Calligraphy.ttf') format('truetype');
+  src: url('/src/assets/fonts/Roxale\ Story\ Calligraphy.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
